# Pi-hole-Blocklist-Optimizer

./: .gitignore  .prettierrc  Cargo.toml  LICENCE  README.md  blocklist-optimizer.py  blocklists.conf  blocklists.conf.example  pihole_downloader.py  requirements.txt  rustfmt.toml  whitelist.txt.example  whitelists.conf
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
src/: client.rs  config.rs  domain.rs  main.rs  pipeline.rs  progress.rs  whitelist.rs
