[package]
name = "pihole-blocklist-optimizer"
version = "3.0.0"
edition = "2021"
description = "Downloads, optimizes, and organizes Pi-hole blocklists"
license = "MIT"
repository = "https://github.com/zachlagden/Pi-hole-Blocklist-Optimizer"
rust-version = "1.80"

[[bin]]
name = "pihole-optimizer"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
futures = "0.3"
indicatif = "0.17"
log = "0.4"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
url = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
